--- a/bank_application/src/main/resources/application.properties
+++ b/bank_application/src/main/resources/application.properties
@@ -2,4 +2,6 @@ spring.application.name=bank_application
 
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=bank_app
+spring.data.mongodb.database=bank_application
+
+server.port=6000
