--- a/bank_application/src/main/resources/application.properties
+++ b/bank_application/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=bank_application
 
 server.port=6000
+
+refresh-token-expire-in-seconds: 864000
