Added validation for each dto and created the constants class

--- a/bank_application/src/main/resources/application.properties
+++ b/bank_application/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.data.mongodb.database=bank_application
 server.port=6000
 
 refresh-token-expire-in-seconds: 864000
+
+mongodb-connection-url=mongodb://localhost:27017
+
+mongodb-database-name=bank_application
